[project]
name = "sam2-applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"jupyterlab>=4.5.1",
	"matplotlib>=3.10.8",
	"opencv-python>=4.12.0.88",
	"sam2>=1.1.0",
	"torch",
	"torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]
